--- a/flume-spooldir/pom.xml
+++ b/flume-spooldir/pom.xml
@@ -7,9 +7,7 @@
     <artifactId>flume</artifactId>
     <version>1.0</version>
   </parent>
-  <groupId>com.zealot</groupId>
   <artifactId>flume-spooldir</artifactId>
-  <version>1.0</version>
   <name>flume-spooldir</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -17,10 +15,13 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+	<dependency>
+    	<groupId>com.gilt.logback</groupId>
+	    <artifactId>logback-flume-appender</artifactId>
+	    <version>0.0.8-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 </project>
