--- a/flume-spooldir/pom.xml
+++ b/flume-spooldir/pom.xml
@@ -23,6 +23,11 @@
 	    <artifactId>logback-flume-appender</artifactId>
 	    <version>0.0.8-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.1</version>
+		</dependency>
   </dependencies>
   <!-- Package as an executable jar -->
 	<build>
