--- a/flume-logBase/pom.xml
+++ b/flume-logBase/pom.xml
@@ -7,9 +7,7 @@
     <artifactId>flume</artifactId>
     <version>1.0</version>
   </parent>
-  <groupId>com.zealot</groupId>
   <artifactId>flume-logBase</artifactId>
-  <version>1.0</version>
   <name>flume-logBase</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -17,10 +15,13 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+	<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.1</version>
+		</dependency>
   </dependencies>
 </project>
